45
================

18/01/22 Trigger batch option to reset NNN code counts for the year
18/01/22 Only auto exclude animal images from forms, people etc not sent anywhere
18/01/22 SavourLife put trial adoptions on hold instead of adopted
17/01/22 Add options UI for default animal age
13/01/22 Multi-select should use last year of litters instead of active
13/01/22 Prevent inner radio/check group fields becoming required with showif
12/01/22 Show size/weight in banner to assist with giving medications
11/01/22 Fix bug with transport dialog buttons not re-enabling #1084
11/01/22 Require 3 chars to be typed before autocomplete of city/state #1085
09/01/22 Allow SMTP server to be overridden #942
05/01/22 Rename templatedocument.Show to ShowAt to stop MySQL breaking
05/01/22 Allow $URL to be used in payment/request signature/checkout emails #1083
03/01/22 Flag filter on animal multi-select #633
31/12/21 CardCom by email option (Saggi Neumann)
31/12/21 Strip background-image CSS directives from online forms before storing
30/12/21 Multi animal select now filters the list instead of bulk selecting
28/12/21 Use pdf.js to allow viewing of PDFs in the mobile app #584
28/12/21 Allow a Retain For period in years for online form submissions #1077
27/12/21 Person should not be mandatory to create an incident from online form
26/12/21 Do not include emblems when sorting by animal name in find results
26/12/21 HasActiveReserve should observe ReservationCancelledDate
23/12/21 Additional colour options for medium theme
22/12/21 Search all media for matching notes in find animal
19/12/21 SavourLife/PetRescue option to send microchips for all listings
15/12/21 Add a medium/mid-tone theme #1076
15/12/21 Fix bug generating clinic documents with no person
14/12/21 Document template types, fixed template rename display bug #364
13/12/21 Show attachments when emailing media, use name/notes #1074
13/12/21 Hidden config for future limit on date brought in #1075